partial libmpi-postgresql